Adding code for the Q and A Embedding feature.

--- a/App Owns Data/PowerBIEmbedded_AppOwnsData/Views/Home/Index.cshtml
+++ b/App Owns Data/PowerBIEmbedded_AppOwnsData/Views/Home/Index.cshtml
@@ -6,10 +6,10 @@
 }
 
 <div id="buttonsWrapper">
-    Select an entity to embed.<br/><br/>
+    Select an entity to embed.<br /><br />
 
     <a id="btnEmbedReport" href="~/Home/EmbedReport">Embed Report</a>
-    <br/>
+    <br />
 
     <a id="btnEmbedDashboard" href="~/Home/EmbedDashboard">Embed Dashboard</a>
     <br />
@@ -17,8 +17,11 @@
     <a id="btnEmbedTile" href="~/Home/EmbedTile">Embed Tile</a>
     <br />
 
+    <a id="btnEmbedTile" href="~/Home/EmbedQandA">Embed Q and A</a>
+    <br />
+
     <div class="infoBox">
-        <b>Nuget packages which used in this solution</b><br/>
+        <b>Nuget packages which used in this solution</b><br />
         Microsoft.PowerBI.API Version @Model.DotNETSDK<br />
         Microsoft.PowerBI.JavaScript Version 2.6.6<br />
     </div>
